Updates 44 and 43 added

--- a/index.html
+++ b/index.html
@@ -1335,18 +1335,56 @@
 </ul>
 
 <h2>Update 44</h2>
-<p>Release Date:</p>
+<p>Release Date: November 13th, 2019</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Keep on the Borderlands Itemization</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>The Base Attack Speed for bows and throwing weapons has been adjusted for a better experience in the Heroic levels, while keeping the current maximum attack speed at Base Attack Bonus 25 and above. This change approximately doubles the relationship between Base Attack Bonus and Attack Speed, but adjusts the per-level progression to provide less of a per-level increase. Players at all levels should experience an increase in animation smoothness and Attack Speed, with the increase tapering off as your Base Attack Bonus increases.</li>
+<li>Fulcrum Shift has been redesigned, and is now: Kick 'Em While They're Down: You have +5 to-hit and damage to enemies that are knocked down or stunned.</li>
+<li>Items that grant Negative Spell Power now also grant an equivalent amount of Poison Spell Power, and their tooltips have been updated to reflect this change.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>The Monk's Touch of Despair now applies its debuff more reliably.</li>
+<li>Coup de Grace now properly requires five levels of Bard.</li>
+<li>Warpriest and War Soul's Wrathful Weapon damage now properly hits undead.</li>
+<li>Some text has been cleaned up in Pale Master enhancement tree descriptions.</li>
+<li>Wizard Pale Master's Zombie Form now appropriately slows reload speed for crossbows.</li>
+<li>Several versions of Wrack Construct no longer use placeholder icons.</li>
+<li>Wrack Construct in the Mechanic and Battle Engineer trees have had their descriptions updated.</li>
+<li>Warlock's Feigned Health is now less visually obscuring upon application, and no longer covers the buff names of other buffs.</li>
+<li>Falconry's Deadly Instinct now has a more appropriate icon on the buff bar when active.</li>
+<li>Nature's Warrior - Jaws of Ice has been reworded.</li>
+<li>Fatesinger's Harmonic Resonance has a better tooltip and more appropriate visual effects.</li>
+<li>Greater Shout in Fatesinger now has a saving throw.</li>
+<li>Several new Night Revels weapons are now dealing their proper damage type instead of Piercing.</li>
+<li>The Esoteric Initiate set bonus now has a more accurate tooltip.</li>
+<li>The Feywild Dreamer set now provides its correct stats.</li>
+<li>Several items that had their skill or alacrity bonuses adjusted erroneously are now back to their proper values.</li>
+<li>The Shattered Device filigree set now applies on melee strikes.</li>
+<li>Druidic Survival Mastery now applies more consistently.</li>
+<li>Fate, the Knower of All (Raid throwing dagger from Ravenloft) now properly hits enemies while Improved Precise Shot is active.</li>
+<li>Thunderstroke no longer goes through Spell Absorption.</li>
+<li>Rend the Soul no longer puts Thunderstroke on cooldown.</li>
+<li>Evard's Black Tentacles can now be cast targeting a foe.</li>
+<li>The Open Group listing for classes now properly includes Warlocks, and will no longer include Epic levels as per its class designation.</li>
+<li>The member list in the Guild panel now properly displays the proper class icons if you have three classes and Epic levels on a character.</li>
+<li>The Friends List now shows the correct class icons and character levels for characters with Past Lives. This will update on a per-character basis when you next log in.</li>
+<li>The Friends List now displays class information for Warlocks.</li>
+<li>Minor UI scaling improvements have been made to the Friends List page.</li>
+<li>Shortcut bar icons for active abilities that have a hit point or ki cost now properly grey out based on current values.</li>
+<li>When a character dies, the text in the Combat Log telling you how you died is now an eye-catching red.</li>
+<li>The Social UI now has small icons for the Iconic races.</li>
+<li>The Spell Power tooltip on the character sheet now includes Spell Power, Spell Critical Chance, and Spell Critical Multiplier for the Poison and Universal types.</li>
+<li style="color:Blue;">Fatesinger's Primal Hymn now properly adjusts Bow and Thrown Attack Speed instead of all ranged attack speed.</li>
+<li style="color:Blue;">Precision no longer passively applies its 5% bonus to hit calculations, and now only applies it while the toggle is active.</li>
+<li style="color:Blue;">Defensive Fighting no longer passively applies its -5% penalty to hit calculations, and now only applies it while the toggle is active.</li>
+<li style="color:Blue;">Wands, quivers, and missile weapons now work with the Wish of Inheritance.</li>
+<li style="color:Blue;">The Wish of Inheritance no longer goes into Ingredients bags.</li>
+<li style="color:Blue;">Evard's Black Tentacles is now much easier to cast while you have a Foe selected, and will no longer be placed in an inconvenient manner to yourself or enemies.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
@@ -1354,10 +1392,10 @@
 </ul>
 
 <h2>Update 43</h2>
-<p>Release Date:</p>
+<p>Release Date: September 10th, 2019</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>The Soul Splitter Itemization</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
@@ -1365,7 +1403,23 @@
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>The House Sivis Dragonmark now has its correct icon.</li>
+<li>Eldritch Accuracy in Wizard's Eldritch Knight now requires the correct amount of wizard levels.</li>
+<li>Stay Frosty can no longer be erroneously applied to allies.</li>
+<li>Unyielding Sentinel: Draw them Out no longer requires a hard target.</li>
+<li>Shadowdancer: Meld Into Darkness now once again properly describes its duration in its 2nd and 3rd rank tooltips.</li>
+<li>Draconic Incarnation: Embolden now works on Energy Burst and Dragon Breath.</li>
+<li>Dragonborn Race Tree: Embolden now works on Dragon Breath.</li>
+<li>Draconic Incarnation: Dragon Breath now takes Evocation bonuses properly (Conjuration, in the case of Acid).</li>
+<li>Draconic Incarnation: Draconic Fury can now be used while moving.</li>
+<li>Grandmaster of Flowers: Running with the Wind now grants the listed amount of Doublestrike.</li>
+<li>Grandmaster of Flowers: Flower's Thorn now hits things properly.</li>
+<li>Circle of Death's tooltip now includes information about how many targets it can hit.</li>
+<li>Undeath to Death's tooltip now includes information about how many targets it can hit.</li>
+<li>Voltaic Experiment and Radiant Shield filigree now have their correct icons and effects.</li>
+<li>Chaosgarde is now properly made of silver.</li>
+<li style="color:Blue;">Warpriest/War Soul's Wrathful Weapon damage now properly hits undead.</li>
+<li style="color:Blue;">The Epic Past Life Primal: Ancient Power now properly grants +2 to Attack per stack when toggled on, and no longer erroneously grants the stacking bonus passively.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
