--- a/index.html
+++ b/index.html
@@ -1725,7 +1725,7 @@
 </ul>
 
 <h2>Update 38</h2>
-<p>Release Date:</p>
+<p>Release Date: April 11th, 2018</p>
 <h3>Main Features:</h3>
 <ul>
 <li>-</li>
@@ -1736,7 +1736,20 @@
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Shield Bash stuns in Vanguard now play their proper stun effects on targets.</li>
+<li>Tier 1 of Fighter Vanguard Shield Rush is now properly taking Ability Score into account for its DC.</li>
+<li>Rune Arms now show Set Bonuses in the same tooltip position as other items.</li>
+<li>Rune Arm DCs now more reliably factor in specific Rune Arm DC boosts.</li>
+<li>The Echo of Ravenkind now makes your equipped weapons Good-aligned.</li>
+<li>The Echo of Ravenkind's Improved Deception should now function.</li>
+<li>The rare version of the Purity: Death Block filigree now properly gives MRR instead of PRR.</li>
+<li>The Purity set's three piece description now more accurately states what it blocks.</li>
+<li>The Cry of Battle set now works on Hirelings and Pets in addition to Summoned/Charmed creatures.</li>
+<li>The Wild Grove Ship Amenity's bonus to Ability scores now applies to Hirelings and pets in addition to Summoned and Charmed creatures.</li>
+<li>The Sellsword's tavern Ship Amenity no longer gives out Ability Score bonuses to Hirelings. It now gives +4/8/12 PRR and MRR to Hirelings, pet, and Summoned/Charmed creatures.</li>
+<li>The Hag Apothecary Ship Amenity no longer refers to a nonexistent vendor.</li>
+<li>The Heroic Silent Avenger set bonus is now properly giving out the right amount of Fortification Bypass.</li>
+<li>Aasimar Protector and Fallen Ascended Bonds no longer stop working after death.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
