last updates - 37 and 36!

--- a/index.html
+++ b/index.html
@@ -1757,10 +1757,10 @@
 </ul>
 
 <h2>Update 37</h2>
-<p>Release Date:</p>
+<p>Release Date: December 6th, 2017</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Mists of Ravenloft Expansion Pack Itemization</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
@@ -1776,10 +1776,12 @@
 </ul>
 
 <h2>Update 36</h2>
-<p>Release Date:</p>
+<p>Release Date: July 12, 2017</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Mines of Tethyamar Itemization</li>
+<li>Red Fens Quest Pack Itemization Overhaul</li>
+<li style="color:Blue;">Night Revels Event Itemization Overhaul</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
@@ -1787,7 +1789,148 @@
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Several Airship amenities that did not have descriptions now do.</li>
+<li>The Airship Captain Anceia now remembers where the Hall of Heroes is.</li>
+<li>The Shrine to the Devourer amenity now gives its correct Acid and Cold Spell Power.</li>
+<li>Sully's Old Grog now has a proper mouse-over tooltip.</li>
+<li>Fighter's Swift Defense and Paladin's Swift Defense now properly state that they are Action Boost bonuses to Movement Speed.</li>
+<li>Devour the Soul's DC description has been updated to match its effect.</li>
+<li>Fighter and Vanguard Shield Rush now benefit from abilities which add to DCs.</li>
+<li>Deep Gnome's Phantasmal Killer SLA description has been updated to no longer use the term SLA.</li>
+<li>Gnome's Color Spray no longer adds DR to targets that it dazes.</li>
+<li>Tempest and Deepwood Stalker abilities that apply effects while in light or no armor now apply more consistently, including on Warforged.</li>
+<li>Tempest active abilities that claim to be Melee Dual Wielding Attacks now actually require you to be dual-wielding.</li>
+<li>The Critical bonuses granted in Tempest now apply more reliably.</li>
+<li>Warlock enhancement trees now have their correct icons.</li>
+<li>Know the Angles now has its proper icon, and its description has been improved.</li>
+<li>The Spell Point Value at the end of Enlightened Spirit's Resist Energy SLA has been corrected.</li>
+<li>Half-elf Artificer Dilettante's Rank two now states that it does not allow you to use Rune Arms.</li>
+<li>Fixed incorrect values displaying in the Harper Agent tree:</li>
+<li>Magical Endurance: Changed tooltip from 30/30/40 to 30/60/100.</li>
+<li>Harper Enchantment: Added caveat that the +1 applies to main and off-hand weapons, but does not work with shields.</li>
+<li>Traveler's Toughness: Changed tooltip from +5 Max HP at all ranks to 5/10/15.</li>
+<li>Strategic Combat I and II: Added caveat that this ability does work with handwraps, but not with shields.</li>
+<li>Spellsinger's Spellsong Vigor now has its duration listing in the tooltip.</li>
+<li>Stay Frosty's tooltip has been updated to match its effect.</li>
+<li>Divine Crusader's Celestial Champion Crit Threat now persists through zone transfers, and no longer excludes handwraps.</li>
+<li>The Core enhancements in Legendary Dreadnaught and Shadowdancer now properly reflect Melee and Ranged Power gained per Epic Destiny level.</li>
+<li>Tooltips in Fatesinger have had their descriptions and flavor text improved.</li>
+<li>Fury of the Wild's Ward Against Weird ability is now a Primal Bonus to Spell Resistance, and has new values of 5/30/60.</li>
+<li>Magister's Call Kindred Spirit summoning spells now fail if you try to cast them under level 20.</li>
+<li>Artificer, Bard, Barbarian, and Monk-specific class feats now have a category in the Feats panel.</li>
+<li>All proficiencies now appear under one Proficiencies feat.</li>
+<li>Monk active form strikes now have their correct icon.</li>
+<li>Hellball's description now matches in both the Intelligence and Charisma descriptions.</li>
+<li>Metal damage-type Epic Feats now persist through zone transfers.</li>
+<li>The Epic Past Life Feat Doubleshot now gives only its intended benefit.</li>
+<li>The feats for White and Purple Reaper Eyes no longer disappear on logout.</li>
+<li>Burst of Glacial Wrath's freezing effect is no longer considered to be a mind-altering effect.</li>
+<li>Several raid items now have their proper orange border.</li>
+<li>Several non-raid items now have their border updated to blue.</li>
+<li>Heroic and Racial Reincarnation Hearts have been renamed to avoid confusion. They are now named Heroic True Heart of Wood and Heroic True Heart of Blood.</li>
+<li>Random loot's descriptions have been improved. Numerous descriptions have been re-typed to avoid vagueness or other issues.</li>
+<li>The Pet Rock is now a Boulder instead of a Bowler. Well, it may still Bowl, but it does so as a Boulder.</li>
+<li>Heroic and Legendary Bracers of the Sun and Moon now work correctly.</li>
+<li>The majority of item-based sources of Spell Resistance have had their values reduced.</li>
+<li>The trade-in recipes for Tempest Runes no longer show an ingredient description for Xoriat Runes.</li>
+<li>Items that are supposed to drop on leaving an adventure now properly do so.</li>
+<li>Fixed issues with several throwing axes that prevented them from working with Improved Precise Shot.</li>
+<li>The rune arm Titan's Fist now gives its +6 Intelligence.</li>
+<li>Public areas and Taverns no longer report that they are regenerating XP debt.</li>
+<li>Epic Inferno of the Damned, Epic Desecrated Temple of Vol, Epic Fleshmaker's Laboratory, Epic Ghosts of Perdition, Search and Rescue, Memoirs of an Illusory Larcener, and Good Intentions can now be shared normally.</li>
+<li>Inferno of the Damned's portals now have scaling hit point values depending on difficulty, in part to avoid a "double teleport" glitch.</li>
+<li>Mask of Deception's Arms Master now properly rolls Bluff, instead of Intimidate.</li>
+<li>Text and Typos:</li>
+<li>Corrected NPC dialogue in The Newcomers to correctly spell Dunalenthea</li>
+<li>Corrected name of Orc Chieftain in the Slave Pits of the Undercity</li>
+<li>Feryl Cay'Vorim in Belly of the Beast no longer asks for the wrong DC in his dialogue.</li>
+<li>In The House of Rusted Blades, Teblyn Dun'Robar no longer calls for his warrios.</li>
+<li>Fixed names and dialogue of the following NPCs:<ul>
+<li>The Corpse NPCs in Stromvauld's Mine</li>
+<li>The Magic Mouth in Tower of Frost</li>
+<li>The Portal to Khyber in the Eveningstar Cavern</li>
+<li>The Storm Horns Transporter</li>
+<li>Villis Magra in The Twelve Tower</li></ul></li>
+<li>ToEE Optional Rust Monster name corrected from Bladebreaker to Brightbane</li>
+<li>Several typos fixed in the DM and/or Optional text of the following quests:<ul>
+<li>Acute Delirium</li>
+<li>In the Belly of the Beast</li>
+<li>Beyond the Rift</li>
+<li>Black and Blue</li>
+<li>The Chronoscope</li>
+<li>Creeping Death</li>
+<li>Diplomatic Impunity</li>
+<li>Epic Inferno of the Damned</li>
+<li>Information is Key</li>
+<li>The Last Stand</li>
+<li>Memoirs of an Illusory Larcener</li>
+<li>The Newcomers</li>
+<li>Overgrowth</li>
+<li>The Portal Opens</li>
+<li>Precious Cargo</li>
+<li>The Reaver's Fate</li>
+<li>Reclaiming Memories</li>
+<li>The Sane Asylum</li>
+<li>Let Sleeping Dust Lie</li>
+<li>The Spinner of Shadows</li>
+<li>Subversion</li>
+<li>What Goes Up</li></ul></li>
+<li>Fixed the DM voice versus DM text discrepancies in the following quests:<ul>
+<li>Fall of Truth</li>
+<li>Impossible Demands</li></ul></li>
+<li>NPC dialogue for What Goes Up fixing corrected, no longer includes /n (changed to backslash n)</li>
+<li>Moved a spider so it is no longer under the landscape in Caught in the Web.</li>
+<li>Loading screens have been fixed in Ascension Chamber, Litany of the Dead, Three Barrel Cove, Vision of Destruction, and The Underdark.</li>
+<li>Fixed incomplete Optional Objective descriptions in the Seal of Shan-To-Kor.</li>
+<li>Old and inactive quest objectives from Redemption no longer display.</li>
+<li>The Drow Optional in Search and Rescue now has a working one-way door.</li>
+<li>Some geometry has been improved in Lines of Supply.</li>
+<li>Fixed a ladder bug in Assault on the Aerie of the Slave Lords.</li>
+<li>Levers in Offering of Blood have been moved to be seen more easily, and to make them more accessible.</li>
+<li>The trap boxes in Recovering the Lost Tome and Creeping Death have been rotated so they open visibly.</li>
+<li>Inquisitor Gnomon's text now matches his voice in Lords of Dust.</li>
+<li>Displacement now properly states that it can only be used on Self.</li>
+<li>Lightning Sphere now has a functional saving throw for both monsters and player casters.</li>
+<li>Fixed a typo when an Airship invitation teleportation fails.</li>
+<li>Numerous minor typos corrected.</li>
+<li>The /raid completions command now properly shows completions for newer raids.</li>
+<li>Poison damage that lowers Wisdom on-hit has been renamed from Wisdom to Bewildering.</li>
+<li style="color:Blue;">Arcane Archer's fifth Core enhancement Shadow Arrows no longer removes its passive +1 Critical Multiplier when swapping your weapon.</li>
+<li style="color:Blue;">Mines of Tethyamar quests on Legendary Casual now drop Legendary named items instead of Heroic named items.</li>
+<li style="color:Blue;">The percentage chance for Mines of Tethyamar named items to get Reaper bonuses are now at their intended level.</li>
+<li style="color:Blue;">Mines of Tethyamar named items can no longer gain multiple Reaper bonuses.</li>
+<li style="color:Blue;">The light armor Graz'zt's Habiliment now properly appears in Desire in the Dark instead of other Mines of Tethyamar quests.</li>
+<li style="color:Blue;">The robe Deep Arcanum no longer appears in Desire in the Dark, and instead properly appears in Graveyard Shift.</li>
+<li style="color:Blue;">There is now a single Guild Buffs icon that remains visible when the Hide Guild Buffs UI option is enabled. This buff is only granted when using the Airship Amenity Bar, and simply displays the time remaining on non-Cargo Hold guild buffs.</li>
+<li style="color:Blue;">Monk Feats and enhancements that grant damage dice to Handwraps no longer appear on the weapon listed as simple "Handwraps".</li>
+<li style="color:Blue;">Blessing of Silvanus should once again properly appear in the Feats list of characters who have the Feat.</li>
+<li style="color:Blue;">The multiselector slots for the Artificer: Battle Engineer tree now shows its appropriate icons before they are selected.</li>
+<li style="color:Blue;">Artificer's Battle Engineer's Caustic Strike, Shatter Defenses, and Thunder-Shock Weapon no longer stop movement when used.</li>
+<li style="color:Blue;">Acid and Rust damage from Caustic Strike, as well as electric damage from Thunder-Shock Weapon, are now properly listed in the Combat Log.</li>
+<li style="color:Blue;">The Ranged version of Thunder-Shock Weapon now accurately states that it scales off of Ranged Power instead of Melee Power.</li>
+<li style="color:Blue;">Shatter Defenses now visually appears in the Tier 3 row of the enhancement panel. The ability had always acted as if it were on the third tier, but now actually is.</li>
+<li style="color:Blue;">Fixed a bug with Arcane Archer's Arrows of Terror that caused the fear effect to apply to invalid targets like constructs, undead, and oozes.</li>
+<li style="color:Blue;">Smoldering Mauls from Temple of Elemental Evil now properly display their name.</li>
+<li style="color:Blue;">The elemental visual effects on random loot now properly display.</li>
+<li style="color:Blue;">The rate at which Quarterstaves lose durability has been reduced significantly.</li>
+<li style="color:Blue;">The Alluring Bonus to skills uses a base Exceptional Bonus, rather than a Competence Bonus that most items use.</li>
+<li style="color:Blue;">Healing Amplification effects on newer items now properly list their bonus type in their description. This has caused a few named items with Quality Healing Amplification to appear to change to Exceptional, but this is a text change only.</li>
+<li style="color:Blue;">Repair Amplification effects on newer items now properly list their bonus type in their description.</li>
+<li style="color:Blue;">Destruction no longer deals double the damage listed in its description.</li>
+<li style="color:Blue;">Sunburst no longer causes permanent blindness, and instead causes a timed Blind effect.</li>
+<li style="color:Blue;">The icon for Reactive Heal's Ward has been fixed.</li>
+<li style="color:Blue;">Deathblock now displays on the buff bar.</li>
+<li style="color:Blue;">Freedom of Movement's passive icon from gear is now octagonal instead of square.</li>
+<li style="color:Blue;">The Guild Buff duration icon no longer disappears when Jump is cast, or while wearing a Jump item.</li>
+<li style="color:Blue;">Fear Immunity now uses the correct icon with borders.</li>
+<li style="color:Blue;">Fixed a bug where some abilities that granted Healing Amplification were using both the old and updated systems, causing them to provide far more healing amplification than described.</li>
+<li style="color:Blue;">Corrected the spelling of the Deity Feat category</li>
+<li style="color:Blue;">Elite and Epic Elite Quivers of Poison no longer have incorrect descriptions</li>
+<li style="color:Blue;">Clerics on the Font of healing path now consistently receive Healing Domain.</li>
+<li style="color:Blue;">Clerics on the Scourge of the Undead path now consistently receive Good Domain.</li>
+<li style="color:Blue;">Clerics on the Warpriest Path now consistently receive War Domain.</li>
+<li style="color:Blue;">Sun Elf Morninglords on their path now consistently receive Sun Domain.</li>
+<li style="color:Blue;">Unyielding Sentinel's Vigor of Battle now gives only the 20 Healing Amplification its text indicates that it should.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
