cleaning up some text

--- a/index.html
+++ b/index.html
@@ -84,25 +84,25 @@
 <li>The names of Feats and Enhancements are now bigger in their tooltips to make it easier to parse what they are.</li>
 <li>SLA tooltips now display spell info, such as their spell point cost, spell DC, and spell school, automatically.</li>
 <li>Certain aspects of enhancements no longer show in the tooltip (such as prerequisites) if you own the enhancement and are looking via your character sheet. When hovered over in the tree they will show their AP cost and prerequisites as usual.</ul></li></li>
-<li>A series of large changes have been made to how we display Feats to the players:</li>
-<li>Character Creation:</li>
+<li>A series of large changes have been made to how we display Feats to the players:<ul>
+<li>Character Creation:<ul>
 <li>Feats now display in neat categories that are easier to parse and sort through.</li>
 <li>The summary at the bottom and at the last stage in advancement shows you all feats without category view so that you just get a list of what feats you have without them being condensed underneath a click block.</li>
-<li>The collapse/expand button up top plays nice with them so you can collapse all/expand all with one click.</li>
-<li>Character Sheet:</li>
+<li>The collapse/expand button up top plays nice with them so you can collapse all/expand all with one click.</li></ul></li>
+<li>Character Sheet:<ul>
 <li>Feats now display in neat categories that are easier to parse and sort through.</li>
 <li>Collapse/expand button works with them.</li>
-<li>Feats that are acquired on a temporary basis now display an indicator below their name stating as such.</li>
-<li>Level Up Screen:</li>
+<li>Feats that are acquired on a temporary basis now display an indicator below their name stating as such.</li></ul></li>
+<li>Level Up Screen:<ul>
 <li>Categories now have well formatted labels that actually match the +/- button in relative vertical area, which makes everything look a little nicer.</li>
 <li>You may now click anywhere on the category to open and close it which means you no longer have to press the tiny little +/- button to open/close things.</li>
 <li>There is a new check box at the top that is checked by default. when unchecked, the feat window will hide all feats that you are not actually able to train. in practice this cuts about 60% of the elements out of the window making it a lot easier to find what you want but this will obviously shift up and down depending on test cases.</li>
 <li>There are two new buttons up top, collapse all and expand all. they collapse all and expand all categories, just as they do in the other two panels.</li>
 <li>Slightly modified the list of feats showed to the player during level up to exclude even more feats that they will never qualify for (right now we only show you a subsection and this cleans the subsection up just a bit/)</li>
 <li>The Granted Class Feats section at the top now shows the feats as they exist on you and not just their category, meaning that you actually see those feats and their icons right at the top without them being under a click block.</li>
-<li>The summary panel on the following page also now shows the feats as they exist sans category, meaning you see the feats and their icons without seeing the category and the feats are no longer under a click block.</li>
-<li>Feat Swap Screen:</li>
-<li>Feats now display with the levels taken next to them at a glance so it's easier to parse what levels you took feats at.</li>
+<li>The summary panel on the following page also now shows the feats as they exist sans category, meaning you see the feats and their icons without seeing the category and the feats are no longer under a click block.</li></ul></li>
+<li>Feat Swap Screen:<ul>
+<li>Feats now display with the levels taken next to them at a glance so it's easier to parse what levels you took feats at.</li></ul></li></ul></li>
 <li>Journals have a slightly more readable font and contrast.</li>
 <li>Hovering over your Enhancement Points now displays a formatted tooltip explaining some basics about your character, the points they've earned, and the tomes they've used.</li>
 <li style="color:Blue;">While on a Wilderness Area, selecting a quest from your quest journal now points an arrow on your minimap towards that quest.</li>
