Added two more commentaries

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <li>Stormsinger Archtype</li>
         <li>Dark Apostate Archtype</li>
         <li>Sacred Fist Archtype</li>
-        <li>Divine Disciple Revamp</li>
+        <li class="commentary"><span class="base">Divine Disciple Revamp</span><span class="tooltip">This revamp involved writing new functionality into our enhancement system to support cores that criss-crossed. I dubbed the tree my "lefty-righty" tree during development. Unlike other Enhancement trees, this one had two conflicting sets of core abilities that overlapped each other, forcing a player to choose if they wanted to go from right to left or left to right depending on if they wanted darkness abilities or light-based ones. A player can also dip into both sides, forgoing a capstone BUT attaining elemental power to support the elemental Cleric domains. I think it's probably my best work in terms of revamps - an overhaul that breaks all of the rules and supported 3 conflicting playstyles in a way that feels fun!</span></li>
         </ul>
       </div>
       <div class="balance">
@@ -463,7 +463,7 @@
         <li>Newly created Glamered shields will now cleanly equip to your cosmetic offhand without reporting that there's an inventory error when trying to double-click them.</li>
         <li>Glamered items will no longer improperly show their weapon dice or their augment slots.</li>
         <li>Glamered items have slightly prettier descriptions.</li>
-        <li>The Quest Selector UI now has a search bar! This also works for searching by level. You may also now search for a specific level in the Adventure Compendium.</li>
+        <li class="commentary"><span class="base">The Quest Selector UI now has a search bar! This also works for searching by level. You may also now search for a specific level in the Adventure Compendium.</span><span class="tooltip">This is probably my best engineering change since the Mount UI debuted. I've put a lot of elbow grease into our grouping system and this felt great to get done.</span></li>
         <li style="color:Blue;">Examining your Artificer and Druid pets now shows their total level instead of a class breakdown.</li>
         <li style="color:Blue;">Legendary characters in non-Legendary dungeons will now be able to tell if they are overlevel in the dungeon by checking the XP Report.</li>
         <li style="color:Blue;">Non-legendary wilderness areas no longer display that Legendary characters are eligible to receive XP.</li>
